Fix terminal scrollbar positioning
This was caused by xtermjs/xterm.js#3398 forcing a width on the viewport
element. The simple fix is to just override that which reverts to the old
position: absolute behavior.

Fixes #133154

--- a/src/vs/workbench/contrib/terminal/browser/media/terminal.css
+++ b/src/vs/workbench/contrib/terminal/browser/media/terminal.css
@@ -78,6 +78,8 @@
 .monaco-workbench .pane-body.integrated-terminal .xterm-viewport {
 	box-sizing: border-box;
 	margin-right: -10px;
+	/* Override xterm.js' width as we want to size the viewport to fill the panel so the scrollbar is on the right edge */
+	width: auto !important;
 }
 .monaco-workbench .editor-instance .terminal-group .monaco-split-view2.horizontal .split-view-view:last-child .xterm-viewport,
 .monaco-workbench .pane-body.integrated-terminal .terminal-group .monaco-split-view2.horizontal .split-view-view:last-child .xterm-viewport {
